Various site changes to nav, banner, and section 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/favicon.ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/favicon.ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="css/style.css">
@@ -27,8 +43,6 @@
     <!-- Animate CSS-->
     <link href="css/animate.css" rel="stylesheet" type="text/css">
 
-    <!--Google Webfonts-->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -52,11 +66,11 @@
                     <!--Logo-->
                     <div id="logo">
                         <!--Logo that is shown on the banner-->
-                        <img src="images/logo.png" id="banner-logo" alt="Landing Page"/>
+                        <img src="images/gp4.png" id="banner-logo" alt="Landing Page"/>
                         <!--End of Banner Logo-->
 
                         <!--The Logo that is shown on the sticky Navigation Bar-->
-                        <img src="images/logo.png" id="navigation-logo" alt="Landing Page"/>
+                        <img src="images/gp1.png" id="navigation-logo" alt="Landing Page"/>
                         <!--End of Navigation Logo-->
 
                     </div>
@@ -103,7 +117,7 @@
 
                 <div class="section-heading">
                     <h1>Discover and Develop your Potential</h1>
-                    <h3>We are an organization whose mission is to effecively equip people to excel in life and expand their influence</h3>
+                    <h3>Globalplex's mission is to effecively equip people to excel in life and expand their influence</h3>
                 </div>
 
                 <div class="text-center">
@@ -126,8 +140,7 @@
                 <div class="col-3">
                     <div class="section-heading">
                         <h2 class="section-title">Effectively Equipping</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <p class="section-subtitle">Our approach is to effectively equip and empower each individual through personal coaching, consistent consultation, and goal-setting accountability</p>
                     </div>
 
                 </div>
@@ -138,7 +151,7 @@
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <!--Icon-->
                         <div class="icon">
-                            <i class="fa fa-user fa-2x"></i>
+                            <img src="images/icons/in-person.png" alt="Icon">
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
@@ -153,7 +166,7 @@
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
                         <!--Icon-->
                         <div class="icon">
-                            <i class="fa fa-bolt fa-2x"></i>
+                            <img src="images/icons/one-time.png" alt="Icon">
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
@@ -165,10 +178,10 @@
                     <!--End of Icon Block-->
 
                     <!--Icon Block-->
-                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="col-1 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
                         <!--Icon-->
                         <div class="icon">
-                            <i class="fa fa-graduation-cap fa-2x"></i>
+                            <img src="images/icons/educational.png" alt="Icon">
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
@@ -232,7 +245,6 @@
                 <!--Content of the Right Side-->
                 <div class="col-3">
                     <div class="section-heading">
-                        <h3>BELIEVING</h3>
                         <h2 class="section-title">Focusing On What Matters Most</h2>
                         <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
@@ -254,7 +266,7 @@
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img src="images/dancer.jpg" alt="Dancer"/>
+                    <img src="images/banner-images/hero-earth.png" alt="Img"/>
                 </div>
 
             </div>
@@ -489,7 +501,7 @@
 <script src="js/jquery.enllax.min.js"></script>
 <script src="js/jquery.scrollUp.min.js"></script>
 <script src="js/jquery.easing.min.js"></script>
-<script src="js/jquery.stickyNavbar.min.js"></script>
+<!-- <script src="js/jquery.stickyNavbar.min.js"></script> -->
 <script src="js/jquery.waypoints.min.js"></script>
 <script src="js/images-loaded.min.js"></script>
 <script src="js/lightbox.min.js"></script>
