--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <div id="wrapper">
 
-    <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5">
+    <header id="banner" class="scrollto clearfix fullscreen" data-enllax-ratio=".5">
         <div id="header" class="nav-collapse">
             <div class="row clearfix">
                 <div class="col-1">
@@ -200,6 +200,49 @@
         </section>
         <!--End of Introduction-->
 
+        <section id="excel-in-life" class="scrollto">
+            <div class="row clearfix">
+                <div class="col-2">
+                    <div class="col-2 icon-block icon-top">
+                        <div class="icon">
+                            <i class="fa fa-rocket fa-2x"></i>
+                        </div>
+                        <div class="icon-block-description">
+                            <h4>Parallax Effect</h4>
+                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
+                                nemore vivendum</p>
+                        </div>
+                    </div>
+                    <div class="col-2 icon-block icon-top">
+                        <div class="icon">
+                            <i class="fa fa-rocket fa-2x"></i>
+                        </div>
+                        <div class="icon-block-description">
+                            <h4>Parallax Effect</h4>
+                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
+                                nemore vivendum</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="col-4">
+
+                    </div>
+                    <div class="col-2">
+                        <div class="section-heading text-right">
+                            <h2 class="section-title">Excel In Life</h2>
+                            <p class="section-subtitle">Our carefully tailored development services enable you to reach your full potential and help you achieve greater performance and results</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div id="expand-influence" class="scrollto"> 
+            <div class="row no-padding-bottom clearfix">
+
+            </div>
+        </div>
 
         <!--Gallery-->
         <!-- <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
