placeholders for sections 3 and 4

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="57x57" href="/favicon.ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/favicon.ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/favicon.ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/favicon.ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/favicon.ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/favicon.ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/favicon.ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/favicon.ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon.ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon.ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico/favicon-16x16.png">
-    <link rel="manifest" href="/favicon.ico/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/favicon.ico/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Main CSS Files -->
@@ -133,7 +133,7 @@
     <main id="content">
 
         <!--Introduction-->
-        <section id="about" class="introduction scrollto">
+        <section id="about" class="introduction scrollto section-size">
 
             <div class="row clearfix">
 
@@ -200,7 +200,7 @@
         </section>
         <!--End of Introduction-->
 
-        <section id="excel-in-life" class="scrollto">
+        <section id="excel-in-life" class="scrollto section-size">
             <div class="row clearfix">
                 <div class="col-2">
                     <div class="col-2 icon-block icon-top">
@@ -225,10 +225,10 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <div class="col-4">
+                    <div class="col-3">
 
                     </div>
-                    <div class="col-2">
+                    <div class="col-2-3">
                         <div class="section-heading text-right">
                             <h2 class="section-title">Excel In Life</h2>
                             <p class="section-subtitle">Our carefully tailored development services enable you to reach your full potential and help you achieve greater performance and results</p>
@@ -238,9 +238,44 @@
             </div>
         </section>
 
-        <div id="expand-influence" class="scrollto"> 
+        <div id="expand-influence" class="scrollto section-size text-center"> 
             <div class="row no-padding-bottom clearfix">
+                    <div class="section-heading">
+                        <h2 class="section-title">Expand Influence</h2>
+                        <p class="section-subtitle">
+                            Our program helps you expand your influence and  develop life-long impact within your organization  
+                        </p>
+                    </div>
+                    <div class="col-2">
+                        <div class="placeholder-element">
 
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="placeholder-element">
+                            
+                        </div>
+                    </div>
+                    <div class="col-2 icon-block icon-top">
+                        <div class="icon">
+                            <i class="fa fa-rocket fa-2x"></i>
+                        </div>
+                        <div class="icon-block-description">
+                            <h4>Parallax Effect</h4>
+                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
+                                nemore vivendum</p>
+                        </div>
+                    </div>
+                    <div class="col-2 icon-block icon-top">
+                        <div class="icon">
+                            <i class="fa fa-rocket fa-2x"></i>
+                        </div>
+                        <div class="icon-block-description">
+                            <h4>Parallax Effect</h4>
+                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
+                                nemore vivendum</p>
+                        </div>
+                    </div>
             </div>
         </div>
 
