section 3 and 4 content filled

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                     <h1>Discover and Develop your Potential</h1>
                     <h3>Globalplex's mission is to effecively equip people to excel in life and expand their influence</h3>
                 </div>
+                
+                <div class="placeholder-element"></div>
+                <div class="placeholder-element"></div>
 
                 <div class="text-center">
                     <a href="#about" class="button">FIND OUT MORE</a>
@@ -203,24 +206,34 @@
         <section id="excel-in-life" class="scrollto section-size">
             <div class="row clearfix">
                 <div class="col-2">
-                    <div class="col-2 icon-block icon-top">
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <div class="icon">
-                            <i class="fa fa-rocket fa-2x"></i>
+                            <img src="images/icons/technical-skill.png" alt="Icon">
+                            <!-- <i class="fa fa-rocket fa-2x"></i> -->
                         </div>
                         <div class="icon-block-description">
-                            <h4>Parallax Effect</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
+                            <h4>Technical Skills</h4>
+                            <p>Resume Building <br/>
+                                Presentation Skills <br/>
+                                Interview Coaching<br/>
+                                Technology Proficiency
+                            </p>
                         </div>
                     </div>
-                    <div class="col-2 icon-block icon-top">
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <div class="icon">
-                            <i class="fa fa-rocket fa-2x"></i>
+                            <img src="images/icons/soft-skill.png" alt="Icon">
+                            <!-- <i class="fa fa-rocket fa-2x"></i> -->
                         </div>
                         <div class="icon-block-description">
-                            <h4>Parallax Effect</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
+                            <h4>Soft Skills</h4>
+                            <p>
+                                Creativity Development <br/>
+                                Problem Solving Skills<br/>
+                                Critical Thinking Training<br/>
+                                Communication Skills <br/>
+                                Time Management    <br/>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -246,35 +259,36 @@
                             Our program helps you expand your influence and  develop life-long impact within your organization  
                         </p>
                     </div>
-                    <div class="col-2">
-                        <div class="placeholder-element">
-
-                        </div>
+                    <!-- <div class="col-2">
+                        <div class="placeholder-element"></div>
                     </div>
                     <div class="col-2">
-                        <div class="placeholder-element">
-                            
+                        <div class="placeholder-element"></div>
+                    </div> -->
+                    <div class="col-2 icon-block icon-top">
+                        <div class="col-4"></div>
+                        <div class="col-2">
+                            <div class="icon">
+                                <img src="images/icons/transformation.png" alt="Icon">
+                            </div>
+                            <div class="icon-block-description">
+                                <p>We have the right transformation roadmap for you whether you are transitioning from school to the workforce or advancing your career to the next level</p>
+                            </div>
                         </div>
+                        <div class="col-4"></div>
                     </div>
                     <div class="col-2 icon-block icon-top">
-                        <div class="icon">
-                            <i class="fa fa-rocket fa-2x"></i>
+                        <div class="col-4"></div>
+                        <div class="col-2">
+                            <div class="icon">
+                                <img src="images/icons/change-world.png" alt="Icon">
+                            </div>
+                            <div class="icon-block-description">
+                                <p>We believe that we can change the world for the better by transforming one person at a time, 
+                                        starting from you!</p>
+                            </div>
                         </div>
-                        <div class="icon-block-description">
-                            <h4>Parallax Effect</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
-                        </div>
-                    </div>
-                    <div class="col-2 icon-block icon-top">
-                        <div class="icon">
-                            <i class="fa fa-rocket fa-2x"></i>
-                        </div>
-                        <div class="icon-block-description">
-                            <h4>Parallax Effect</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
-                        </div>
+                        <div class="col-4"></div>
                     </div>
             </div>
         </div>
