fixing fade in and layout

--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
                             Our program helps you expand your influence and  develop life-long impact within your organization  
                         </p>
                     </div>
-                    <!-- <div class="col-2">
-                        <div class="placeholder-element"></div>
+                    <div class="col-2">
+                        <div style="height:5vh"></div>
                     </div>
                     <div class="col-2">
-                        <div class="placeholder-element"></div>
-                    </div> -->
-                    <div class="col-2 icon-block icon-top">
+                        <div style="height:5vh"></div>
+                    </div>
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <div class="col-4"></div>
                         <div class="col-2">
                             <div class="icon">
@@ -277,7 +277,7 @@
                         </div>
                         <div class="col-4"></div>
                     </div>
-                    <div class="col-2 icon-block icon-top">
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <div class="col-4"></div>
                         <div class="col-2">
                             <div class="icon">
