--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 
                 <div class="placeholder-element"></div>
-                <div class="placeholder-element"></div>
+                <!-- <div class="placeholder-element"></div> -->
 
                 <div class="text-center">
                     <a href="#about" class="button">FIND OUT MORE</a>
@@ -198,7 +198,7 @@
         </section>
         <!--End of Introduction-->
 
-        <section id="excel-in-life" class="scrollto section-size" data-enllax-ratio="0.1">
+        <section id="excel-in-life" class="scrollto section-size">
             <div class="row clearfix">
                 <div class="col-2">
                     <!--Icon Block-->
@@ -248,7 +248,7 @@
             </div>
         </section>
 
-        <div id="expand-influence" class="scrollto section-size text-center" data-enllax-ratio=".2"> 
+        <div id="expand-influence" class="scrollto section-size text-center" data-enllax-ratio=".1"> 
             <div class="row no-padding-bottom clearfix">
                     <div class="section-heading">
                         <h2 class="section-title">Expand Influence</h2>
@@ -262,23 +262,29 @@
                     </div>
 
                     <div class="col-2 icon-block icon-top">
-                        <div class="icon">
-                            <img src="images/icons/transformation.png" alt="Icon">
-                        </div>
-                        <div class="icon-block-description">
-                            <h4>Grow your influence</h4>
-                            <p>We have the right transformation roadmap for you whether you are transitioning from school to the workforce or advancing your career to the next level</p>
+                        <div class="col-4"></div>
+                        <div class="col-2">
+                            <div class="icon">
+                                <img src="images/icons/transformation.png" alt="Icon">
+                            </div>
+                            <div class="icon-block-description">
+                                <h4>Grow your influence</h4>
+                                <p>We have the right transformation roadmap for you whether you are transitioning from school to the workforce or advancing your career to the next level</p>
+                            </div>
                         </div>
                         <div class="col-4"></div>
                     </div>
 
                     <div class="col-2 icon-block icon-top">
-                        <div class="icon">
-                            <img src="images/icons/change-world.png" alt="Icon">
-                        </div>
-                        <div class="icon-block-description">
-                            <h4>Transform the world</h4>
-                            <p>We believe that we can change the world for the better by transforming one person at a time, start with you!</p>
+                        <div class="col-4"></div>
+                        <div class="col-2">
+                            <div class="icon">
+                                <img src="images/icons/change-world.png" alt="Icon">
+                            </div>
+                            <div class="icon-block-description">
+                                <h4>Transform the world</h4>
+                                <p>We believe that we can change the world for the better by transforming one person at a time, start with you!</p>
+                            </div>
                         </div>
                         <div class="col-4"></div>
                     </div>
