Fix margins and other spacing

--- a/index.html
+++ b/index.html
@@ -118,9 +118,6 @@
                     <h3>Globalplex's mission is to effecively equip people to excel in life and expand their influence</h3>
                 </div>
                 
-                <div class="placeholder-element"></div>
-                <!-- <div class="placeholder-element"></div> -->
-
                 <div class="text-center">
                     <a href="#about" class="button">FIND OUT MORE</a>
                 </div>
@@ -316,7 +313,7 @@
         <!--End of Gallery-->
 
         <!--Testimonials-->
-        <aside id="testimonials" class="scrollto text-center" data-enllax-ratio=".2">
+        <aside id="testimonials" class="scrollto text-center" data-enllax-ratio=".1">
 
             <div class="row clearfix">
 
@@ -360,7 +357,7 @@
         <!--End of Testimonials-->
 
         <!--Contact-->
-        <section id="contact" class="contact scrollto" data-enllax-ratio=".3">
+        <section id="contact" class="contact scrollto">
             <div class="row">
     
                 <div class="col-2 text-center">
@@ -386,7 +383,7 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row">
 
-            <p id="copyright" class="col-2">Globalplex</a></p>
+            <p id="copyright" class="col-2">© 2019 Globalplex</a></p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
