css fixes for home banner, updated expand influence

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!--Banner Content-->
         <div id="banner-content" class="row clearfix">
 
-            <div class="col-2">
+            <div class="col-61">
                 <div class="section-heading">
                     <h1>Discover and Develop your Potential</h1>
                     <h3>Globalplex's mission is to effectively equip people to excel in life and expand their influence</h3>
@@ -237,22 +237,21 @@
             </div>
         </section>
 
-        <div id="expand-influence" class="scrollto section-size text-center" data-enllax-ratio=".1"> 
+        <div id="expand-influence" class="scrollto section-size"> 
             <div class="row no-padding-bottom clearfix">
-                    <div class="section-heading">
-                        <h2 class="section-title">Expand Influence</h2>
-                        <p class="section-subtitle">
-                            Our program helps you expand your influence and  develop life-long impact within your organization  
-                        </p>
-                    </div>
-
                     <div class="col-1">
-                        <div class="placeholder-element"></div>
+                        <div class="col-3">
+                            <div class="section-heading">
+                                <h2 class="section-title">Expand Influence</h2>
+                                <p class="section-subtitle">
+                                    Our program helps you expand your influence and  develop life-long impact within your organization  
+                                </p>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="col-2 icon-block icon-top">
-                        <div class="col-4"></div>
-                        <div class="col-2">
+                    <div class="col-61">
+                        <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
                             <div class="icon">
                                 <img src="images/icons/transformation.png" alt="Icon">
                             </div>
@@ -261,12 +260,7 @@
                                 <p>We have the right transformation roadmap for you whether you are transitioning from school to the workforce or advancing your career to the next level</p>
                             </div>
                         </div>
-                        <div class="col-4"></div>
-                    </div>
-
-                    <div class="col-2 icon-block icon-top">
-                        <div class="col-4"></div>
-                        <div class="col-2">
+                        <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
                             <div class="icon">
                                 <img src="images/icons/change-world.png" alt="Icon">
                             </div>
@@ -275,8 +269,8 @@
                                 <p>We believe that we can change the world for the better by transforming one person at a time, start with you!</p>
                             </div>
                         </div>
-                        <div class="col-4"></div>
                     </div>
+
 
                     <div class="col-1">
                         <div class="placeholder-element"></div>
