excel in life and contact us fixes

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <section id="excel-in-life" class="scrollto section-size">
             <div class="row clearfix">
-                <div class="col-2">
+                <div class="col-38">
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
                         <!--Icon-->
@@ -199,10 +199,12 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Technical Skills</h4>
-                            <p>Resume Building</p>
-                            <p>Presentation Skills</p>
-                            <p>Interview Coaching</p>
-                            <p>Technology Proficiency</p>
+                            <p>
+                                Resume Building <br/>
+                                Presentation Skills <br/>
+                                Interview Coaching <br/>
+                                Technology Proficiency <br/>
+                            </p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -216,18 +218,20 @@
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
                                 <h4>Soft Skills</h4>
-                                <p>Creativity Development</p>
-                                <p>Problem Solving Skills</p>
-                                <p>Critical Thinking Training</p>
-                                <p>Time Management</p>
+                                <p>
+                                    Creativity Development<br/>
+                                    Problem Solving Skills<br/>
+                                    Critical Thinking Training<br/>
+                                    Time Management<br/>
+                                </p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
                 </div>
 
-                <div class="col-2">
-                    <div class="col-3"></div>
-                    <div class="col-2-3">
+                <div class="col-61">
+                    <!-- <div class="col-2"></div> -->
+                    <div class="col-1">
                         <div class="section-heading">
                             <h2 class="section-title">Excel In Life</h2>
                             <p class="section-subtitle">Our carefully tailored development services enable you to reach your full potential and help you achieve greater performance and results</p>
@@ -355,8 +359,14 @@
                 <div class="col-2">
                     <!--Logo that is shown on the banner-->
                     <img src="images/gp4.png" id="footer-logo" alt="Landing Page"/>
-                    <h3><img src="images/icons/location.png" alt="Location" width="40" height="40" align="left">Hong Kong</h3>
-                    <h3><img src="images/icons/email.png" alt="Email" width="40" height="40" align="left">contact@globalplex.org</h3>
+                    <div>
+                        <img src="images/icons/location.png" alt="Location" width="40" height="40" align="left">
+                        <h3>Hong Kong</h3>
+                    </div>
+                    <div>
+                        <img style="margin-top: 0.5%" src="images/icons/email.png" alt="Email" width="40" height="40" align="left">
+                        <h3><a style="color: white" href="mailto:contact@globalplex.org">contact@globalplex.org</a></h3>
+                    </div>
                 </div>
     
             </div>
