effectively equipping css updates

--- a/index.html
+++ b/index.html
@@ -136,48 +136,51 @@
                 </div>
 
                 <div class="col-2-3">
+                    <div class="col-1">
+                        <!--Icon Block-->
+                        <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
+                            <!--Icon-->
+                            <div class="icon">
+                                <img src="images/icons/in-person.png" alt="Icon">
+                            </div>
+                            <!--Icon Block Description-->
+                            <div class="icon-block-description">
+                                <h4>In Person</h4>
+                                <p>In person coaching to give you a personalized training and development experience</p>
+                            </div>
+                        </div>
+                        <!--End of Icon Block-->
 
-                    <!--Icon Block-->
-                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
-                        <!--Icon-->
-                        <div class="icon">
-                            <img src="images/icons/in-person.png" alt="Icon">
+                        <!--Icon Block-->
+                        <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
+                            <!--Icon-->
+                            <div class="icon">
+                                <img src="images/icons/one-time.png" alt="Icon">
+                            </div>
+                            <!--Icon Block Description-->
+                            <div class="icon-block-description">
+                                <h4>One Time</h4>
+                                <mark>One time consultation on the area of development you or your team would like to grow in</mark>
+                            </div>
                         </div>
-                        <!--Icon Block Description-->
-                        <div class="icon-block-description">
-                            <h4>In Person</h4>
-                            <p>In person coaching to give you a personalized training and development experience</p>
-                        </div>
-                    </div>
                     <!--End of Icon Block-->
-
-                    <!--Icon Block-->
-                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
-                        <!--Icon-->
-                        <div class="icon">
-                            <img src="images/icons/one-time.png" alt="Icon">
-                        </div>
-                        <!--Icon Block Description-->
-                        <div class="icon-block-description">
-                            <h4>One Time</h4>
-                            <mark>One time consultation on the area of development you or your team would like to grow in</mark>
-                        </div>
                     </div>
-                    <!--End of Icon Block-->
-
-                    <!--Icon Block-->
-                    <div class="col-1 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
-                        <!--Icon-->
-                        <div class="icon">
-                            <img src="images/icons/educational.png" alt="Icon">
+                    
+                    <div class="col-1">
+                        <!--Icon Block-->
+                        <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
+                            <!--Icon-->
+                            <div class="icon">
+                                <img src="images/icons/educational.png" alt="Icon">
+                            </div>
+                            <!--Icon Block Description-->
+                            <div class="icon-block-description">
+                                <h4>Educational</h4>
+                                <mark>Educational and training programs and curriculum to help empower and equip you or your organization</mark>
+                            </div>
                         </div>
-                        <!--Icon Block Description-->
-                        <div class="icon-block-description">
-                            <h4>Educational</h4>
-                            <mark>Educational and training programs and curriculum to help empower and equip you or your organization</mark>
-                        </div>
+                        <!--End of Icon Block-->
                     </div>
-                    <!--End of Icon Block-->
 
                 </div>
 
