--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
                 <!--User Testimonial-->
                 <div class="col-3">
-                    <blockquote class="testimonial card classic">
+                    <blockquote class="testimonial card classic wow fadeInUp" data-wow-delay="0.5s">
                         <img src="images/user-images/user-2.jpg" alt="User"/>
                         <p>Albert Paredandan</p>
                         <q>Nobody likes to fail. Being a student, this is something I always try to avoid. While university taught me to avoid failures at all cost, Seth has helped me not just to overcome my failures, but to welcome them as opportunities of growth and development to become a better person. 10/10 would recommend again</q>
@@ -337,7 +337,7 @@
 
                 <!--User Testimonial-->
                 <div class="col-3">
-                    <blockquote class="testimonial card classic">
+                    <blockquote class="testimonial card classic wow fadeInUp" data-wow-delay="0.6s">
                         <img src="images/user-images/user-3.jpg" alt="User"/>
                         <p>Anne Hu</p>
                         <q>Seth Kim is a HIIT coach for the character - he is always maximizing on teaching moments that he observes on the spot in different situations. He helps the learner to understand why we do what we do and addresses our deeper motivations in order to excel and move forward. The training process is stretching, but always worth it.</q>
