Add white highlight to make text readable over background image

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>One Time</h4>
+                                <h4><mark>One Time</mark></h4>
                                 <mark>One time consultation on the area of development you or your team would like to grow in</mark>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Educational</h4>
+                                <h4><mark>Educational</mark></h4>
                                 <mark>Educational and training programs and curriculum to help empower and equip you or your organization</mark>
                             </div>
                         </div>
@@ -263,8 +263,8 @@
                                 <img src="images/icons/transformation.png" alt="Icon">
                             </div>
                             <div class="icon-block-description">
-                                <h4>Grow your influence</h4>
-                                <p>We have the right transformation roadmap for you whether you are transitioning from school to the workforce or advancing your career to the next level</p>
+                                <h4><mark>Grow your influence</mark></h4>
+                                <p><mark>We have the right transformation roadmap for you whether you are transitioning from school to the workforce or advancing your career to the next level</mark></p>
                             </div>
                         </div>
                         <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
@@ -272,8 +272,8 @@
                                 <img src="images/icons/change-world.png" alt="Icon">
                             </div>
                             <div class="icon-block-description">
-                                <h4>Transform the world</h4>
-                                <p>We believe that we can change the world for the better by transforming one person at a time, start with you!</p>
+                                <h4><mark>Transform the world</mark></h4>
+                                <p><mark>We believe that we can change the world for the better by transforming one person at a time, start with you!</mark></p>
                             </div>
                         </div>
                     </div>
