More readability hacks

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="col-61">
                 <div class="section-heading">
                     <h1>Discover and Develop your Potential</h1>
-                    <h3>Globalplex's mission is to effectively equip people to excel in life and expand their influence</h3>
+                    <h3><mark>Globalplex's mission is to effectively equip people to excel in life and expand their influence</mark></h3>
                     <a href="#equipping" class="button">FIND OUT MORE</a>
                 </div>
             </div>
