--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row">
 
-            <p id="copyright" class="col-2">© 2019 Globalplex</a></p>
+            <p id="copyright" class="col-2">© 2019 Globalplex</p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
@@ -433,6 +433,9 @@
                     </a>
                 </li>
             </ul>
+
+            <div class="invis col-1"><a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a></div>
+
             <!--End of Social Icons in Footer-->
         </div>
     </footer>
